hphp/hack/test/typecheck/new_inference/coalesce_enum_switch.php.rust_elab.exp
File "coalesce_enum_switch.php", line 4, characters 6-11:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
